# aquashrimp

./: .env.example  .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml
.claude/: settings.json
aquashrimp/: __init__.py
aquashrimp/baselines/: __init__.py  optimal_agent.py  random_agent.py  rule_based_agent.py  run_baseline.py
aquashrimp/models/: __init__.py  actions.py  enums.py  observations.py  state.py
aquashrimp/rewards/: __init__.py  reward_calculator.py
aquashrimp/server/: __init__.py  app.py  router.py
aquashrimp/simulation/: __init__.py  disease.py  feeding_trays.py  market.py  shrimp_growth.py  water_quality.py  weather.py
aquashrimp/tasks/: __init__.py  commercial_grow_out.py  nursery_pond.py  semi_intensive_farm.py
scripts/: benchmark_all.py
server/: app.py
tests/: __init__.py  test_commercial_grow_out.py  test_disease.py  test_feeding_trays.py  test_nursery_pond.py  test_semi_intensive.py  test_shrimp_growth.py  test_water_quality.py
