[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openenv-aquashrimp"
version = "1.0.0"
description = "AquaShrimp: Precision shrimp (prawn) aquaculture operations management OpenEnv environment"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "aquashrimp-team" }]
keywords = ["aquaculture", "shrimp", "prawn", "reinforcement-learning", "openenv", "simulation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "numpy>=1.26.0",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["aquashrimp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
